endpoint for single loan
