# routes/loan.routes.js
@@ -4,8 +4,9 @@ const loans = require('../controllers/loan.controller.js');
 
 router.get('/', loans.findAll);
 router.get('/by_user', loans.findAllByUserId);
+router.get('/:id', loans.findOne);
 
 // Handle payments
-router.get('/pay', loans.pay);
+router.post('/pay', loans.pay);
 
 module.exports = router;
